--- a/src/common/stylus/icon.styl
+++ b/src/common/stylus/icon.styl
@@ -1,10 +1,10 @@
 @font-face 
   font-family: 'takeout'
-  src:  url('fonts/takeout.eot?ax73v0')
-  src:  url('fonts/takeout.eot?ax73v0#iefix') format('embedded-opentype'),
-    url('fonts/takeout.ttf?ax73v0') format('truetype'),
-    url('fonts/takeout.woff?ax73v0') format('woff'),
-    url('fonts/takeout.svg?ax73v0#takeout') format('svg')
+  src:  url('../fonts/takeout.eot?ax73v0')
+  src:  url('../fonts/takeout.eot?ax73v0#iefix') format('embedded-opentype'),
+    url('../fonts/takeout.ttf?ax73v0') format('truetype'),
+    url('../fonts/takeout.woff?ax73v0') format('woff'),
+    url('../fonts/takeout.svg?ax73v0#takeout') format('svg')
   font-weight: normal
   font-style: normal
 
@@ -53,4 +53,3 @@
 
 .icon-keyboard_arrow_right:before 
   content: "\e909"
-
